# Slated_Vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Source/Boilerplate/: CMakeLists.txt
Source/Boilerplate/src/: main.cpp
Source/EditorOLD/: CMakeLists.txt
Source/EditorOLD/scripts/: Behavior.lua  GameEntity.lua
Source/EditorOLD/shaders/: marbling.slang  quicky.slang  standard.slang  zippy.slang
Source/EditorOLD/shaders/BuiltIn/: BuiltIn.Attribs.slang  BuiltIn.Common.slang
Source/EditorOLD/shaders/EditorEXT/: mask.slang
Source/EditorOLD/src/: Editor.cpp  Editor.h  ImGuiSnippets.cpp  ImGuiSnippets.h  Utilities.cpp  Utilities.h  ViewportCamera.cpp  ViewportCamera.h  engine.proto  main.cpp
Source/EditorOLD/src/Panels/: AssetsPanel.cpp  PropertiesPanel.cpp  ScenePanel.cpp
Source/EditorOLD/textures/cache/: qwantani_dusk_2_1k.hdr
Source/EditorSolution/: SlateEditorSolution.sln
Source/EditorSolution/SlateEditor/: App.axaml  App.axaml.cs  Program.cs  SlateEditor.csproj  ViewLocator.cs  app.manifest
Source/EditorSolution/SlateEditor/Controls/: IEditorPanel.axaml  IEditorPanel.axaml.cs
Source/EditorSolution/SlateEditor/Models/: IOSurfaceImageView.cs  (+1 more)
Source/Engine/: CMakeLists.txt  SlateCBindings.h  SlateMessageCodes.h
Source/Engine/cmake/: buildhelper.cmake  manualshaderEXT.cmake
Source/Engine/include/Slate/: Application.h  Bitmap.h  Camera.h  Filesystem.h  GX.h  GXBackend.h  GameObject.h  ISerializable.h  PipelineBuilder.h  Primitives.h  RenderPassBuilder.h  ShaderCursor.h  SmartPointers.h  SubmitHandle.h  Timer.h  UUID.h  VkObjects.h  VulkanSwapchain.h  Window.h
Source/Engine/include/Slate/Common/: Defer.h  FastSTD.h  Handles.h  Invalids.h
Source/Engine/include/Slate/ECS/: Components.h  Entity.h  Scene.h
Source/Engine/include/Slate/Loaders/: GLTFLoader.h  ImageLoader.h  ShaderLoader.h
Source/Engine/include/Slate/Network/: NamedPipe.h
Source/Engine/include/Slate/Resources/: IResource.h  ShaderResource.h
Source/Engine/include/Slate/Systems/: ISystem.h  ShaderSystem.h
Source/Engine/include/Slate/VK/: vkenums.h  vkimpl.h  vkutil.h
Source/Engine/lib/: Application.cpp  CommandBuffer.cpp  Entity.cpp  Filesystem.cpp  GX.cpp  GXBackend.cpp  InputHandler.cpp  ShaderCursor.cpp  VulkanImmediateCommands.cpp  VulkanStagingDevice.cpp  Window.cpp  vkinfo.cpp  vkutil.cpp
Source/Engine/lib/Loaders/: ShaderLoader.cpp
Source/Engine/lib/Platform/Unix/: NamedPipe_Unix.cpp  Socket_Unix.cpp
Source/Engine/lib/Platform/Windows/: NamedPipe_Windows.cpp
Source/Engine/lib/Resources/: IResource.cpp  ShaderResource.cpp  TextureResource.cpp
Source/Engine/lib/Systems/: ISystem.cpp  ShaderSystem.cpp  TransformSystem.cpp
cmake/: buildhelper.cmake  manualshader.cmake
editor/: CMakeLists.txt
editor/materials/: test.json
editor/scripts/Slate/: Common.lua
editor/shaders/: editor_images.slang  editor_primitives.frag  editor_primitives.slang  editor_primitives.vert  fullscreen_outline.slang  standard.frag  standard.slang  standard.vert  weave.slang
editor/shaders/BuiltIn/: BuiltIn.Common.slang  BuiltIn.Lighting.slang  BuiltIn.Math.slang  BuiltIn.Standard.slang
editor/shaders/EditorEXT/: editor_grid.slang  editor_images.slang  editor_primitives.slang  solid_shading.slang
editor/shaders/compiled_shaders/: editor_primitives.frag.spv  editor_primitives.vert.spv  standard.frag.spv  standard.vert.spv
editor/shaders/shared/: scene_data.glsl
editor/src/: AssetsPanel.cpp  Context.h  Editor.cpp  Editor.h  EditorApplication.cpp  EditorApplication.h  EditorGui.cpp  EditorGui.h  Fonts.h  ImGuiComponents.cpp  ImGuiComponents.h  ImGuiSnippets.cpp  ImGuiSnippets.h  Primitives.h  PropertiesPanel.cpp  ScenePanel.cpp  ViewportCamera.cpp  ViewportCamera.h  ViewportPanel.cpp  main.cpp
editor/src/Panels/: AssetsPanel.cpp  PropertiesPanel.cpp  ScenePanel.cpp  ViewportPanel.cpp
engine/: CMakeLists.txt
engine/bindings/lua_stubs/: Vec2.d.lua
engine/boilerplate/: main.cpp
engine/include/Slate/: Application.h  BaseSystem.h  Camera.h  CommandBuffer.h  CommandPool.h  Components.h  Debug.h  Entity.h  Errors.h  Expect.h  FastSTD.h  Files.h  Filesystem.h  GX.h  GXBackbone.h  GXBackend.h  GeneralTypes.h  IApplication.h  IManager.h  Input.h  InputHandler.h  Loader.h  Logger.h  MeshGenerators.h  PipelineBuilder.h  Primitives.h  Ref.h  RenderEngine.h  RenderObject.h  RenderPassBuilder.h  Renderer.h  ResourcePool.h  ResourceRegistry.h  Scene.h  SceneTemplates.h  Scope.h  ScriptEngine.h  Shader.h  ShaderPass.h  SmartPointers.h  (+11 more)
engine/include/Slate/Common/: Debug.h  FastSTD.h  Handles.h  HelperMacros.h  Logger.h  SmartObject.h
engine/include/Slate/ECS/: Components.h  Entity.h  Scene.h
engine/include/Slate/Loaders/: GLTFLoader.h
engine/include/Slate/Network/: Socket.h
engine/include/Slate/Resources/: IResource.h  MeshResource.h  ScriptResource.h  ShaderResource.h  TextureResource.h
engine/include/Slate/Systems/: ISystem.h  InputSystem.h  RenderSystem.h  ShaderSystem.h  TimeSystem.h  TransformSystem.h  WindowSystem.h
engine/include/Slate/VK/: PipelineBuilder.h  vkdescriptor.h  vkenums.h  vkext.h  vkinfo.h  vktypes.h  vkutil.h
engine/lib/: Application.cpp  Bitmap.cpp  CommandBuffer.cpp  CommandPool.cpp  Entity.cpp  Files.cpp  Filesystem.cpp  GX.cpp  GXBackbone.cpp  GXBackend.cpp  IApplication.cpp  Input.cpp  InputHandler.cpp  Loader.cpp  MeshGenerators.cpp  PipelineBuilder.cpp  RenderEngineOps.cpp  RenderEngineStartup.cpp  RenderPassBuilder.cpp  Renderer.cpp  ResourceRegistry.cpp  Scene.cpp  ScriptEngine.cpp  Shader.cpp  ShaderPass.cpp  Time.cpp  Timer.cpp  VulkanEngine.cpp  VulkanStagingDevice.cpp  VulkanSwapchain.cpp  Window.cpp  WindowService.cpp  vkdescriptor.cpp  vkimpl.cpp  vkinfo.cpp  vkutil.cpp
engine/lib/Loaders/: GLTFLoader.cpp  ImageLoader.cpp  ShaderLoader.cpp
engine/lib/Resources/: IResource.cpp  MeshResource.cpp  ScriptResource.cpp  ShaderResource.cpp  TextureResource.cpp
engine/lib/Systems/: ISystem.cpp  InputSystem.cpp  RenderSystem.cpp  ShaderSystem.cpp  TimeSystem.cpp  TransformSystem.cpp  WindowSystem.cpp
scripting/: CMakeLists.txt
(+22 files in other folders)
